--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,8 +1,8 @@
 <form>
-  <!-- Email input -->
+  <!-- Username input -->
   <div data-mdb-input-init class="form-outline mb-4">
-    <input type="email" id="form2Example1" class="form-control" />
-    <label class="form-label" for="form2Example1">Email address</label>
+    <input type="username" id="form2Example1" class="form-control" />
+    <label class="form-label" for="form2Example1">Username</label>
   </div>
 
   <!-- Password input -->
