--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,10 +1,11 @@
 <form>
-  <style>
-    body {
-      background-image: url('https://www.google.com/url?sa=i&url=https%3A%2F%2Fstock.adobe.com%2Fsearch%3Fk%3Dgym%2Bbackground&psig=AOvVaw3hVb0O6t3FACNZDcoL4uKn&ust=1713402063522000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCMDC6KCGyIUDFQAAAAAdAAAAABAW');
-      background-repeat: no-repeat;
-    }
-</style>
+  <div
+  class="bg-image"
+  style="
+    background-image: url('https://www.google.com/url?sa=i&url=https%3A%2F%2Fstock.adobe.com%2Fsearch%3Fk%3Dgym%2Bbackground&psig=AOvVaw2dMhsjGvpzHUW3f84afASj&ust=1713402292092000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCPi1p42HyIUDFQAAAAAdAAAAABAE');
+    height: 100vh;
+  ">
+  </div>
   <!-- Username input -->
   <div data-mdb-input-init class="form-outline mb-4">
     <input type="username" id="form2Example1" class="form-control" />
