--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,8 +4,9 @@
   style="
     background-image: url('https://www.google.com/url?sa=i&url=https%3A%2F%2Fstock.adobe.com%2Fsearch%3Fk%3Dgym%2Bbackground&psig=AOvVaw2dMhsjGvpzHUW3f84afASj&ust=1713402292092000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCPi1p42HyIUDFQAAAAAdAAAAABAE');
     height: 100vh;
-  ">
-  </div>
+  "
+></div>
+
   <!-- Username input -->
   <div data-mdb-input-init class="form-outline mb-4">
     <input type="username" id="form2Example1" class="form-control" />
