--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,8 +1,8 @@
 <form>
-  <div
-  class="bg-image"
-  <link rel="stylesheet" href="index.css">
-></div>
+  <div>
+    class="bg-image"
+    <link rel="stylesheet" href="index.css">
+  </div>
 
   <!-- Username input -->
   <div data-mdb-input-init class="form-outline mb-4">
