--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,5 @@
 <form>
-  <div class="bg-image" style="background-image: url('https://t4.ftcdn.net/jpg/01/30/39/43/360_F_130394395_7FSUsAaybwtBe3hBXx9xcffIYkWEQbaO.jpg'); height: 100vh;">
+  <div class="bg-image" style="background-image: url('https://t4.ftcdn.net/jpg/01/30/39/43/360_F_130394395_7FSUsAaybwtBe3hBXx9xcffIYkWEQbaO.jpg');">
 </div>
   <!-- Username input -->
   <div data-mdb-input-init class="form-outline mb-4">
