--- a/app/views/articles/login.html.erb
+++ b/app/views/articles/login.html.erb
@@ -6,7 +6,7 @@
           <div class="card-body p-5 text-center">
 
             <div class="mb-md-5 mt-md-4 pb-5">
-              <img class="rounded-circle shadow-4-strong" alt="FitFusion logo" src="/app/assets/images/logo.jpg" />
+              <%= image_tag ("logo.jpg", class: "img-responsive")%>
               <h2 class="fw-bold mb-2 text-uppercase">Login to FitFusion</h2>
               <p class="text-white-50 mb-5">Please enter your login and password!</p>
 
