--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,15 @@
 
   <body>
     <%= render 'articles/header' %>
+    <form class="">
+        <% if !user_signed_in? %>
+          <%= link_to 'Log In', new_user_session_path, class:"btn btn-outline-success"%>
+          <%= link_to 'Become member', new_user_registration_path, class:"btn btn-outline-success"%>
+        <% else %>
+          <%= current_user.email %>
+          <%= link_to 'Sign out', destroy_user_session_path, class:"btn btn-outline-success"%>
+        <% end %>
+      </form>
     <div class='container'>
       <%= yield %>
     </div>
