--- a/app/views/articles/_header.html.erb
+++ b/app/views/articles/_header.html.erb
@@ -10,5 +10,14 @@
       <a class="nav-item nav-link" href="#">Social</a>
       <a class="nav-item nav-link" href="#">Medals</a>
     </div>
+    <form class="">
+        <% if !user_signed_in? %>
+          <%= link_to 'Log In', new_user_session_path, class:"btn btn-outline-success"%>
+          <%= link_to 'Become member', new_user_registration_path, class:"btn btn-outline-success"%>
+        <% else %>
+          <%= current_user.email %>
+          <%= link_to 'Sign out', destroy_user_session_path, class:"btn btn-outline-success"%>
+        <% end %>
+      </form>
   </div>
 </nav>
