--- a/app/views/articles/_header.html.erb
+++ b/app/views/articles/_header.html.erb
@@ -6,14 +6,16 @@
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
       <li class="nav-item nav-link" href="#">
+        <%= link_to "Workouts", root_workouts_path, class:"nav-link" %>
+      </li>
+      <li class="nav-item nav-link" href="#">
+        <%= link_to "Nutrition", workoutlogs_workouts_path, class:"nav-link" %>
+      </li>
+      <li class="nav-item nav-link" href="#">
+        <%= link_to "Social", workoutlogs_workouts_path, class:"nav-link" %>
+      </li>
+      <li class="nav-item nav-link" href="#">
         <%= link_to "Workouts", workoutlogs_workouts_path, class:"nav-link" %>
-      </li>
-      <li class="nav-item nav-link" href="#">
-
-      </li>
-      <li class="nav-item nav-link" href="#">
-      </li>
-      <li class="nav-item nav-link" href="#">
       </li>
     </div>
     <form class="">
