--- a/app/views/articles/_header.html.erb
+++ b/app/views/articles/_header.html.erb
@@ -1,9 +1,12 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">FitFusion<%= link_to "FitFusion", root_path, class:"nav-link" %></a>
+  <a class="navbar-brand" href="#"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <li class="nav-item nav-link" href="#">
+      <%= link_to "FitFusion", root_path, class:"nav-link" %>
+    </li>
     <div class="navbar-nav">
       <li class="nav-item nav-link" href="#">
         <%= link_to "Workouts", workoutlogs_workouts_path, class:"nav-link" %>
