--- a/app/views/articles/_header.html.erb
+++ b/app/views/articles/_header.html.erb
@@ -4,7 +4,7 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    <li class="nav-item nav-link" href="#">
+    <li class="nav-item nav-link active" href="#">
       <%= link_to "FitFusion", root_path, class:"nav-link" %>
     </li>
     <div class="navbar-nav">
