--- a/app/views/articles/_header.html.erb
+++ b/app/views/articles/_header.html.erb
@@ -5,7 +5,7 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <li class="nav-item nav-link" href="#">
-      <%= link_to "FitFusion", root_path, class:"nav-link active" %>
+      <%= link_to "FitFusion", root_path, class:"nav-link" %>
     </li>
     <div class="navbar-nav">
       <li class="nav-item nav-link" href="#">
