--- a/app/views/articles/_header.html.erb
+++ b/app/views/articles/_header.html.erb
@@ -4,10 +4,10 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    <li class="nav-item nav-link" href="#">
-      <%= link_to "FitFusion", root_path, class:"nav-link" %>
-    </li>
     <div class="navbar-nav">
+      <li class="nav-item nav-link" href="#">
+        <%= link_to "FitFusion", root_path, class:"nav-link active" %>
+      </li>
       <li class="nav-item nav-link" href="#">
         <%= link_to "Workouts", workoutlogs_workouts_path, class:"nav-link" %>
       </li>
