Update workouts.html.erb css stylesheet

--- a/app/views/workoutlogs/workouts.html.erb
+++ b/app/views/workoutlogs/workouts.html.erb
@@ -1,3 +1,4 @@
+<%= stylesheet_link_tag 'workLog' %>
 <div class="container-fluid">
   <header>
     <h4 class="display-4 mb-4 text-center">November 2017</h4>
