--- a/app/views/nutritionlogs/nutrition.html.erb
+++ b/app/views/nutritionlogs/nutrition.html.erb
@@ -1,3 +1,4 @@
+<%= stylesheet_link_tag 'nutritionLog' %>
 <section class="intro">
   <div class="gradient-custom-2 h-100">
     <div class="mask d-flex align-items-center h-100">
