--- a/app/views/nutritionlogs/nutrition.html.erb
+++ b/app/views/nutritionlogs/nutrition.html.erb
@@ -23,7 +23,7 @@
                         <label class="form-label" for="form12">Today's Calories</label>
                       </div>
                     </td>
-                    <td>2000</td>
+                    <td>2000C (MAX)</td>
                   </tr>
 
                   <tr>
@@ -34,7 +34,7 @@
                         <label class="form-label" for="form12">Today's Protein</label>
                       </div>
                     </td>
-                    <td>120</td>
+                    <td>120g (MIN)</td>
                   </tr>
 
                   <tr>
@@ -45,7 +45,7 @@
                         <label class="form-label" for="form12">Today's Sleep</label>
                       </div>
                     </td>
-                    <td>120</td>
+                    <td>8hr (MIN)</td>
                   </tr>
                 </tbody>
               </table>
