--- a/app/views/nutritionlogs/nutrition.html.erb
+++ b/app/views/nutritionlogs/nutrition.html.erb
@@ -10,7 +10,8 @@
                 <thead>
                   <tr>
                     <th scope="col">TYPE</th>
-                    <th scope="col">TODAY'S AMOUNT</th>
+                    <th scope="col">ADD AMOUNT</th>
+                    <th> scope="col">CURRENT AMOUNT</th>
                     <th scope="col">MAX/MIN AMOUNT</th>
                   </tr>
                 </thead>
@@ -20,9 +21,10 @@
                     <td>
                       <div class="form-outline" data-mdb-input-init>
                         <input type="text" id="form12" class="form-control" />
-                        <label class="form-label" for="form12">Today's Calories</label>
+                        <label class="form-label" for="form12">Add/Remove Calories</label>
                       </div>
                     </td>
+                    <td>1800C</td>
                     <td>2000C (MAX)</td>
                   </tr>
 
@@ -31,9 +33,10 @@
                     <td>
                       <div class="form-outline" data-mdb-input-init>
                         <input type="text" id="form12" class="form-control" />
-                        <label class="form-label" for="form12">Today's Protein</label>
+                        <label class="form-label" for="form12">Add/Remove Protein</label>
                       </div>
                     </td>
+                    <td>80g</td>
                     <td>120g (MIN)</td>
                   </tr>
 
@@ -42,9 +45,10 @@
                     <td>
                       <div class="form-outline" data-mdb-input-init>
                         <input type="text" id="form12" class="form-control" />
-                        <label class="form-label" for="form12">Today's Sleep</label>
+                        <label class="form-label" for="form12">Add/Remove Sleep</label>
                       </div>
                     </td>
+                    <td>7hr</td>
                     <td>8hr (MIN)</td>
                   </tr>
                 </tbody>
