--- a/app/views/nutritionlogs/nutrition.html.erb
+++ b/app/views/nutritionlogs/nutrition.html.erb
@@ -11,7 +11,7 @@
                   <tr>
                     <th scope="col">TYPE</th>
                     <th scope="col">ADD AMOUNT</th>
-                    <th> scope="col">CURRENT AMOUNT</th>
+                    <th scope="col">CURRENT AMOUNT</th>
                     <th scope="col">MAX/MIN AMOUNT</th>
                   </tr>
                 </thead>
