--- a/app/views/workoutlogs/workouts.html.erb
+++ b/app/views/workoutlogs/workouts.html.erb
@@ -1,7 +1,7 @@
 <%= stylesheet_link_tag 'workLog' %>
 <div class="container-fluid">
   <header>
-    <h4 class="display-4 mb-4 text-center">November 2017</h4>
+    <h4 class="display-4 mb-4 text-center">Weekly Schedule</h4>
     <div class="row d-none d-sm-flex p-1 bg-dark text-white">
       <h5 class="col-sm p-1 text-center">Sunday</h5>
       <h5 class="col-sm p-1 text-center">Monday</h5>
@@ -15,7 +15,7 @@
   <div class="row border border-right-0 border-bottom-0">
     <div class="day col-sm p-2 border border-left-0 border-top-0 text-truncate d-none d-sm-inline-block bg-light text-muted">
       <h5 class="row align-items-center">
-        <span class="date col-1">29</span>
+        #<span class="date col-1">29</span>
         <small class="col d-sm-none text-center text-muted">Sunday</small>
         <span class="col-1"></span>
       </h5>
@@ -23,7 +23,7 @@
     </div>
     <div class="day col-sm p-2 border border-left-0 border-top-0 text-truncate d-none d-sm-inline-block bg-light text-muted">
       <h5 class="row align-items-center">
-        <span class="date col-1">30</span>
+        #<span class="date col-1">30</span>
         <small class="col d-sm-none text-center text-muted">Monday</small>
         <span class="col-1"></span>
       </h5>
@@ -31,7 +31,7 @@
     </div>
     <div class="day col-sm p-2 border border-left-0 border-top-0 text-truncate d-none d-sm-inline-block bg-light text-muted">
       <h5 class="row align-items-center">
-        <span class="date col-1">31</span>
+        #<span class="date col-1">31</span>
         <small class="col d-sm-none text-center text-muted">Tuesday</small>
         <span class="col-1"></span>
       </h5>
@@ -39,7 +39,7 @@
     </div>
     <div class="day col-sm p-2 border border-left-0 border-top-0 text-truncate ">
       <h5 class="row align-items-center">
-        <span class="date col-1">1</span>
+        #<span class="date col-1">1</span>
         <small class="col d-sm-none text-center text-muted">Wednesday</small>
         <span class="col-1"></span>
       </h5>
@@ -47,7 +47,7 @@
     </div>
     <div class="day col-sm p-2 border border-left-0 border-top-0 text-truncate ">
       <h5 class="row align-items-center">
-        <span class="date col-1">2</span>
+        #<span class="date col-1">2</span>
         <small class="col d-sm-none text-center text-muted">Thursday</small>
         <span class="col-1"></span>
       </h5>
@@ -55,7 +55,7 @@
     </div>
     <div class="day col-sm p-2 border border-left-0 border-top-0 text-truncate ">
       <h5 class="row align-items-center">
-        <span class="date col-1">3</span>
+        #<span class="date col-1">3</span>
         <small class="col d-sm-none text-center text-muted">Friday</small>
         <span class="col-1"></span>
       </h5>
@@ -63,7 +63,7 @@
     </div>
     <div class="day col-sm p-2 border border-left-0 border-top-0 text-truncate ">
       <h5 class="row align-items-center">
-        <span class="date col-1">4</span>
+        #<span class="date col-1">4</span>
         <small class="col d-sm-none text-center text-muted">Saturday</small>
         <span class="col-1"></span>
       </h5>
