--- a/app/views/workoutlogs/workouts.html.erb
+++ b/app/views/workoutlogs/workouts.html.erb
@@ -1,66 +1,33 @@
-<%= stylesheet_link_tag 'workLog' %>
-<div class="container-fluid">
-  <header>
-    <h4 class="display-4 mb-4 text-center">Weekly Schedule</h4>
-    <div class="row d-none d-sm-flex p-1 bg-dark text-white">
-      <h5 class="col-sm p-1 text-center">Sunday</h5>
-      <h5 class="col-sm p-1 text-center">Monday</h5>
-      <h5 class="col-sm p-1 text-center">Tuesday</h5>
-      <h5 class="col-sm p-1 text-center">Wednesday</h5>
-      <h5 class="col-sm p-1 text-center">Thursday</h5>
-      <h5 class="col-sm p-1 text-center">Friday</h5>
-      <h5 class="col-sm p-1 text-center">Saturday</h5>
-    </div>
-  </header>
-  <div class="row border border-right-0 border-bottom-0">
-    <div class="day col-sm p-2 border border-left-0 border-top-0 text-truncate d-none d-sm-inline-block bg-light text-muted">
-      <h5 class="row align-items-center">
-        <small class="col d-sm-none text-center text-muted">Sunday</small>
-        <span class="col-1"></span>
-      </h5>
-      <p class="d-sm-none">No events</p>
-    </div>
-    <div class="day col-sm p-2 border border-left-0 border-top-0 text-truncate d-none d-sm-inline-block bg-light text-muted">
-      <h5 class="row align-items-center">
-        <small class="col d-sm-none text-center text-muted">Monday</small>
-        <span class="col-1"></span>
-      </h5>
-      <p class="d-sm-none">No events</p>
-    </div>
-    <div class="day col-sm p-2 border border-left-0 border-top-0 text-truncate d-none d-sm-inline-block bg-light text-muted">
-      <h5 class="row align-items-center">
-        <small class="col d-sm-none text-center text-muted">Tuesday</small>
-        <span class="col-1"></span>
-      </h5>
-      <p class="d-sm-none">No events</p>
-    </div>
-    <div class="day col-sm p-2 border border-left-0 border-top-0 text-truncate ">
-      <h5 class="row align-items-center">
-        <small class="col d-sm-none text-center text-muted">Wednesday</small>
-        <span class="col-1"></span>
-      </h5>
-      <p class="d-sm-none">No events</p>
-    </div>
-    <div class="day col-sm p-2 border border-left-0 border-top-0 text-truncate ">
-      <h5 class="row align-items-center">
-        <small class="col d-sm-none text-center text-muted">Thursday</small>
-        <span class="col-1"></span>
-      </h5>
-      <p class="d-sm-none">No events</p>
-    </div>
-    <div class="day col-sm p-2 border border-left-0 border-top-0 text-truncate ">
-      <h5 class="row align-items-center">
-        <small class="col d-sm-none text-center text-muted">Friday</small>
-        <span class="col-1"></span>
-      </h5>
-      <a class="event d-block p-1 pl-2 pr-2 mb-1 rounded text-truncate small bg-info text-white" title="Test Event 1">Test Event 1</a>
-    </div>
-    <div class="day col-sm p-2 border border-left-0 border-top-0 text-truncate ">
-      <h5 class="row align-items-center">
-        <small class="col d-sm-none text-center text-muted">Saturday</small>
-        <span class="col-1"></span>
-      </h5>
-      <p class="d-sm-none">No events</p>
-    </div>
-    <div class="w-100"></div>
-</div>
+<table class="table">
+  <thead>
+    <tr>
+      <th scope="col">Day</th>
+      <th scope="col">Type</th>
+      <th scope="col"></th>
+      <th scope="col"></th>
+      <th scope="col"></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @workoutlogs.each do |workoutlog| %>
+    <tr>
+      <td><%= workoutlog.day %></td>
+      <td><%= workoutlog.type %></td>
+      <td></td>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Jacob</td>
+      <td>Thornton</td>
+      <td>@fat</td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td>Larry</td>
+      <td>the Bird</td>
+      <td>@twitter</td>
+    </tr>
+  </tbody>
+</table>
