--- a/app/views/workoutlogs/show.html.erb
+++ b/app/views/workoutlogs/show.html.erb
@@ -1,3 +1,4 @@
-<h1><%= @article.title %></h1>
+<h1><%= @workoutlog.day %></h1>
+<h2><%= @workoutlog.type %></h2>
 
-<p><%= @article.body %></p>
+<p><%= @workoutlog.description %></p>
