--- a/app/views/workoutlogs/workouts.html.erb
+++ b/app/views/workoutlogs/workouts.html.erb
@@ -10,24 +10,20 @@
   </thead>
   <tbody>
     <% @workoutlogs.each do |workoutlog| %>
-    <tr>
-      <td><%= workoutlog.day %></td>
-      <td><%= workoutlog.type %></td>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td>Larry</td>
-      <td>the Bird</td>
-      <td>@twitter</td>
-    </tr>
+      <tr>
+        <td>
+          <a href="/workoutlogs/<%= workoutlog.id %>">
+            <%= workoutlog.day %>
+          </a>
+        </td>
+        <td>
+          <a href="/workoutlogs/<%= workoutlog.id %>">
+            <%= workoutlog.type %>
+          </a>
+        </td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
   </tbody>
 </table>
