--- a/app/views/workoutlogs/new.html.erb
+++ b/app/views/workoutlogs/new.html.erb
@@ -1,31 +1,3 @@
 <h1>New Workout</h1>
 
-<%= form_with model: @workoutlog do |form| %>
-  <div>
-    <%= form.label :day %><br>
-    <%= form.text_field :day %>
-    <% @workoutlog.errors.full_messages_for(:day).each do |message| %>
-      <div><%= message %></div>
-    <% end %>
-  </div>
-
-  <div>
-    <%= form.label :type %><br>
-    <%= form.text_field :type %>
-    <% @workoutlog.errors.full_messages_for(:type).each do |message| %>
-      <div><%= message %></div>
-    <% end %>
-  </div>
-
-  <div>
-    <%= form.label :description %><br>
-    <%= form.text_area :description %>
-    <% @workoutlog.errors.full_messages_for(:description).each do |message| %>
-      <div><%= message %></div>
-    <% end %>
-  </div>
-
-  <div>
-    <%= form.submit %>
-  </div>
-<% end %>
+<%= render "form", workoutlog: @workoutlog %>
