--- a/app/views/workoutlogs/show.html.erb
+++ b/app/views/workoutlogs/show.html.erb
@@ -2,3 +2,6 @@
 <h2><%= @workoutlog.type %></h2>
 
 <p><%= @workoutlog.description %></p>
+<div>
+  <%= link_to "Edit", edit_article_path(@article) %>
+</div>
