--- a/app/views/workoutlogs/show.html.erb
+++ b/app/views/workoutlogs/show.html.erb
@@ -3,5 +3,5 @@
 
 <p><%= @workoutlog.description %></p>
 <div>
-  <%= link_to "Edit", edit_article_path(@article) %>
+  <%= link_to "Edit", edit_workoutlog_path(@workoutlog) %>
 </div>
