--- a/app/views/workoutlogs/index.html.erb
+++ b/app/views/workoutlogs/index.html.erb
@@ -21,7 +21,10 @@
           <%= link_to "Show", show_workoutlog_path(workoutlog) %>
         </td>
         <td>
-          Delete
+          <%= link_to "Destroy", workoutlog_path(workoutlog), data: {
+                    turbo_method: :delete,
+                    turbo_confirm: "Are you sure?"
+                  } %>
         </td>
       </tr>
   </tbody>
