--- a/app/views/workoutlogs/index.html.erb
+++ b/app/views/workoutlogs/index.html.erb
@@ -19,7 +19,7 @@
           <%= link_to "Show", show_workoutlog_path(workoutlog) %>
         </td>
       </tr>
-    end
+    <% end %>
   </tbody>
 </table>
 <%= link_to "New Workout", new_workoutlog_path %>
