--- a/app/views/workoutlogs/index.html.erb
+++ b/app/views/workoutlogs/index.html.erb
@@ -2,7 +2,7 @@
   <thead>
     <tr>
       <th scope="col">Day</th>
-      <th scope="col">Type</th>
+      <th scope="col">Regimen</th>
       <th scope="col"></th>
     </tr>
   </thead>
