--- a/app/views/workoutlogs/show.html.erb
+++ b/app/views/workoutlogs/show.html.erb
@@ -1,5 +1,5 @@
 <h1><%= @workoutlog.day %></h1>
-<h2><%= @workoutlog.type %></h2>
+<h2><%= @workoutlog.regimen %></h2>
 
 <p><%= @workoutlog.description %></p>
 <div>
