index.html.erb replace type with regimen

--- a/app/views/workoutlogs/index.html.erb
+++ b/app/views/workoutlogs/index.html.erb
@@ -13,7 +13,7 @@
           <%= workoutlog.day %>
         </td>
         <td>
-            <%= workoutlog.type %>
+            <%= workoutlog.regimen %>
         </td>
         <td>
           <%= link_to "Show", show_workoutlog_path(workoutlog) %>
