--- a/app/views/nutritionlogs/new.html.erb
+++ b/app/views/nutritionlogs/new.html.erb
@@ -1,3 +1,3 @@
 <h1>New Nutrition Log Day</h1>
 
-<%= render "form", workoutlog: @workoutlog %>
+<%= render "form", nutrition_log: @nutrition_log %>
