--- a/app/views/nutritionlogs/index.html.erb
+++ b/app/views/nutritionlogs/index.html.erb
@@ -13,26 +13,28 @@
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <td>
-        
-      </td>
-      <td>
-       
-      </td>
-      <td>
-        
-      </td>
-      <td>
-        
-      </td>
-      <td>
-        
-      </td>
-      <td>
-        
-      </td>
-    </tr>
+    <% @workoutlogs.each do |workoutlog| %>
+      <tr>
+        <td>
+          
+        </td>
+        <td>
+         
+        </td>
+        <td>
+          
+        </td>
+        <td>
+          
+        </td>
+        <td>
+          
+        </td>
+        <td>
+          
+        </td>
+      </tr>
+    <% end %>
   </tbody>
 </table>
 
