--- a/app/views/nutritionlogs/index.html.erb
+++ b/app/views/nutritionlogs/index.html.erb
@@ -4,11 +4,11 @@
   <thead>
     <tr>
       <th>Date</th>
-      <th>Calories Consumed</th>
-      <th>Current Sleep Hours</th>
-      <th>Protein Intake</th>
+      <th>Current Calories</th>
+      <th>Current Sleep</th>
+      <th>Current Protein</th>
       <th>Max Calories</th>
-      <th>Min Sleep Hours</th>
+      <th>Min Sleep</th>
       <th>Min Protein Intake</th>
     </tr>
   </thead>
