--- a/app/views/articles/_header.html.erb
+++ b/app/views/articles/_header.html.erb
@@ -15,7 +15,7 @@
         <%= link_to "Nutrition", nutritionlogs_index_path, class:"nav-link" %>
       </li>
       <li class="nav-item nav-link" href="#">
-        <%= link_to "Social", posts_posts_path, class:"nav-link" %>
+        <%= link_to "Social", posts_index_path, class:"nav-link" %>
       </li>
     </div>
     <form class="">
