--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,6 +7,7 @@
     <%= render post %>
     <p>
       <%= link_to "Show this post", post %>
+      <%= post.likes.count %> <%= (post.likes.count) == 1 ? 'Like' : 'Likes'%>
     </p>
   <% end %>
 </div>
