--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,11 +4,11 @@
 
 <div id="posts">
   <% @posts.each do |post| %>
-    <%= render post %>
-    <p>
+    <div>
+      <%= render post %>
       <%= link_to "Show this post", post %>
       <%= post.likes.count %> <%= (post.likes.count) == 1 ? 'Like' : 'Likes'%>
-    </p>
+    </div>
   <% end %>
 </div>
 
