--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -9,6 +9,7 @@
       <%= link_to "Show this post", post %>
       <%= post.likes.count %> <%= (post.likes.count) == 1 ? 'Like' : 'Likes'%>
     </p>
+    <hr class="hr hr-blurry" />
   <% end %>
 </div>
 
