--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,7 @@
 <p style="color: green"><%= notice %></p>
 
 <h1>Posts</h1>
-
+<hr class="hr hr-blurry" />
 <div id="posts">
   <% @posts.each do |post| %>
     <%= render post %>
