--- a/app/views/articles/_header.html.erb
+++ b/app/views/articles/_header.html.erb
@@ -9,7 +9,7 @@
         <%= link_to "FitFusion", root_path, class:"nav-link active" %>
       </li>
       <li class="nav-item nav-link" href="#">
-        <%= link_to "Workouts", workoutlogs_index_path, class:"nav-link" %>
+        <%= link_to "Workouts", workout_logs_index_path, class:"nav-link" %>
       </li>
       <li class="nav-item nav-link" href="#">
         <%= link_to "Nutrition", nutritionlogs_index_path, class:"nav-link" %>
