--- a/app/views/workout_logs/index.html.erb
+++ b/app/views/workout_logs/index.html.erb
@@ -1,7 +1,7 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Workout logs</h1>
-
+<h1>Your Daily Workout Logs</h1>
+<hr class="hr hr-blurry" />
 <div id="workout_logs">
   <% @workout_logs.each do |workout_log| %>
     <%= render workout_log %>
