--- a/app/views/workout_logs/index.html.erb
+++ b/app/views/workout_logs/index.html.erb
@@ -8,7 +8,9 @@
     <p>
       <%= link_to "Show this workout log", workout_log %>
     </p>
+    <hr class="hr hr-blurry" />
   <% end %>
 </div>
-
-<%= link_to "New workout log", new_workout_log_path %>
+<div>
+  <%= link_to "New workout log", new_workout_log_path %>
+</div>
