--- a/app/views/nutrition_logs/_nutrition_log.html.erb
+++ b/app/views/nutrition_logs/_nutrition_log.html.erb
@@ -3,21 +3,18 @@
     <strong>User:</strong>
     <%= nutrition_log.user_id %>
   </p>
-
   <p>
     <strong>Calories current:</strong>
     <%= nutrition_log.calories_current %>
     <strong>Calories max:</strong>
     <%= nutrition_log.calories_max %>
   </p>
-
   <p>
     <strong>Sleep current:</strong>
     <%= nutrition_log.sleep_current %>
     <strong>Sleep max:</strong>
     <%= nutrition_log.sleep_max %>
   </p>
-
   <p>
     <strong>Protein current:</strong>
     <%= nutrition_log.protein_current %>
@@ -25,3 +22,4 @@
     <%= nutrition_log.protein_max %>
   </p>
 </div>
+<hr class="hr hr-blurry" />
