--- a/app/views/nutrition_logs/index.html.erb
+++ b/app/views/nutrition_logs/index.html.erb
@@ -1,7 +1,7 @@
 <p style="color: green"><%= notice %></p>
 
 <h1>Nutrition logs</h1>
-
+<hr class="hr hr-blurry" />
 <div id="nutrition_logs">
   <% @nutrition_logs.each do |nutrition_log| %>
     <%= render nutrition_log %>
