--- a/app/views/nutrition_logs/_nutrition_log.html.erb
+++ b/app/views/nutrition_logs/_nutrition_log.html.erb
@@ -10,27 +10,27 @@
   </p>
 
   <p>
-    <strong>Sleep current:</strong>
+    <strong>Sleep Current:</strong>
     <%= nutrition_log.sleep_current %>
   </p>
 
   <p>
-    <strong>Protein current:</strong>
+    <strong>Protein Current:</strong>
     <%= nutrition_log.protein_current %>
   </p>
 
   <p>
-    <strong>Calories max:</strong>
+    <strong>Calories Max:</strong>
     <%= nutrition_log.calories_max %>
   </p>
 
   <p>
-    <strong>Sleep max:</strong>
+    <strong>Sleep Min:</strong>
     <%= nutrition_log.sleep_max %>
   </p>
 
   <p>
-    <strong>Protein max:</strong>
+    <strong>Protein Min:</strong>
     <%= nutrition_log.protein_max %>
   </p>
 
