--- a/app/views/nutrition_logs/index.html.erb
+++ b/app/views/nutrition_logs/index.html.erb
@@ -9,6 +9,7 @@
       <%= link_to "Show this nutrition log", nutrition_log %>
     </p>
   <% end %>
+  <hr class="hr hr-blurry" />
 </div>
 
 <%= link_to "New nutrition log", new_nutrition_log_path %>
