--- a/app/views/workout_logs/index.html.erb
+++ b/app/views/workout_logs/index.html.erb
@@ -1,6 +1,9 @@
 <p style="color: green"><%= notice %></p>
 
 <h1>Your Daily Workout Logs</h1>
+<div>
+  <%= link_to "New workout log", new_workout_log_path %>
+</div>
 <hr class="hr hr-blurry" />
 <div id="workout_logs">
   <% @workout_logs.each do |workout_log| %>
