Update _workout_log.html.erb dropdown

--- a/app/views/workout_logs/_workout_log.html.erb
+++ b/app/views/workout_logs/_workout_log.html.erb
@@ -6,7 +6,14 @@
 
   <p>
     <strong>Regimen:</strong>
-    <%= workout_log.regimen %>
+    <select name="regimen">
+      <option value="Cardio">Cardio</option>
+      <option value="Upper">Upper</option>
+      <option value="Lower">Lower</option>
+      <option value="Full">Full</option>
+      <option value="Sport">Sport</option>
+      <option value="Recovery">Recovery</option>
+    </select>
   </p>
 
   <p>
