--- a/app/views/workout_logs/_form.html.erb
+++ b/app/views/workout_logs/_form.html.erb
@@ -20,14 +20,7 @@
     <%= form.label :regimen, style: "display: block" %>
      <p>
     <strong>Regimen:</strong>
-    <select name="regimen">
-      <option value="Cardio">Cardio</option>
-      <option value="Upper">Upper</option>
-      <option value="Lower">Lower</option>
-      <option value="Full">Full</option>
-      <option value="Sport">Sport</option>
-      <option value="Recovery">Recovery</option>
-    </select>
+    <%= form.select :regimen, ["Cardio", "Upper", "Lower", "Full", "Sport", "Recovery"], {}, { style: "display: block" } %>
   </p>
   </div>
 
