--- a/app/views/nutrition_logs/_form.html.erb
+++ b/app/views/nutrition_logs/_form.html.erb
@@ -32,18 +32,18 @@
   </div>
 
   <div>
-    <%= form.label :calories_max, style: "display: block" %>
+    <%= form.label :calories_min, style: "display: block" %>
     <%= form.number_field :calories_max %>
   </div>
 
   <div>
     <%= form.label :sleep_max, style: "display: block" %>
-    <%= form.text_field :sleep_max %>
+    <%= form.text_field :sleep_min %>
   </div>
 
   <div>
-    <%= form.label :protein_max, style: "display: block" %>
-    <%= form.number_field :protein_max %>
+    <%= form.label :protein_min, style: "display: block" %>
+    <%= form.number_field :protein_min %>
   </div>
 
   <div>
