--- a/app/views/nutrition_logs/_nutrition_log.html.erb
+++ b/app/views/nutrition_logs/_nutrition_log.html.erb
@@ -26,12 +26,12 @@
 
   <p>
     <strong>Sleep Min:</strong>
-    <%= nutrition_log.sleep_max %>
+    <%= nutrition_log.sleep_min %>
   </p>
 
   <p>
     <strong>Protein Min:</strong>
-    <%= nutrition_log.protein_max %>
+    <%= nutrition_log.protein_min %>
   </p>
 
 </div>
