--- a/app/views/nutrition_logs/_form.html.erb
+++ b/app/views/nutrition_logs/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div>
     <%= form.label :user_email %>
-    <%= form.text_field :user_email, value: @workout_log.user_email, readonly: true %>
+    <%= form.text_field :user_email, value: @nutrition_log.user_email, readonly: true %>
   </div>
 
   <div>
