--- a/app/views/workout_logs/_form.html.erb
+++ b/app/views/workout_logs/_form.html.erb
@@ -15,6 +15,7 @@
     <%= form.label :user_email %>
     <%= form.text_field :user_email, value: current_user.email, readonly: true %>
   </div>
+  <%= form.hidden_field :user_id, value: current_user.id %>
 
   <div>
     <%= form.label :regimen, style: "display: block" %>
