--- a/app/views/nutrition_logs/index.html.erb
+++ b/app/views/nutrition_logs/index.html.erb
@@ -1,6 +1,6 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Nutrition logs</h1>
+<h1>Your Nutrition Logs</h1>
 <div>
   <%= link_to "New nutrition log", new_nutrition_log_path %>
 </div>
