--- a/app/views/nutrition_logs/_form.html.erb
+++ b/app/views/nutrition_logs/_form.html.erb
@@ -13,8 +13,9 @@
 
   <div>
     <%= form.label :user_email %>
-    <%= form.text_field :user_email, value: @nutrition_log.user_email, readonly: true %>
+    <%= form.text_field :user_email, value: current_user.email, readonly: true %>
   </div>
+  <%= form.hidden_field :user_id, value: current_user.id %>
 
   <div>
     <%= form.label :calories_current, style: "display: block" %>
