--- a/app/views/workout_logs/_workout_log.html.erb
+++ b/app/views/workout_logs/_workout_log.html.erb
@@ -1,5 +1,10 @@
 <div id="<%= dom_id workout_log %>">
   <p>
+    <strong>Created At:</strong>
+    <%= workout_log.created_at %>
+  </p>
+
+  <p>
     <strong>Regimen:</strong>
     <%= workout_log.regimen %>
   </p>
