--- a/app/views/nutrition_logs/_nutrition_log.html.erb
+++ b/app/views/nutrition_logs/_nutrition_log.html.erb
@@ -1,5 +1,10 @@
 <div id="<%= dom_id nutrition_log %>">
   <p>
+    <strong>Created At:</strong>
+    <%= nutrition_log.created_at %>
+  </p>
+
+  <p>
     <strong>Calories current:</strong>
     <%= nutrition_log.calories_current %>
   </p>
