--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,14 +1,20 @@
 <%= stylesheet_link_tag 'social' %>
 
-#Working except for delete
+<!-- Display a notice if there is one -->
 <p style="color: green"><%= notice %></p>
 
+<!-- Main heading -->
 <h1>Social Feed</h1>
+
+<!-- Button to create a new post -->
 <div>
-  <%= link_to "New post", new_post_path %>
+  <%= link_to "New post", new_post_path, class: "button" %>
 </div>
+
+<!-- Horizontal rule -->
 <hr class="hr hr-blurry" />
 
+<!-- Container for displaying posts -->
 <div id="posts">
   <% @posts.each do |post| %>
     <%= render post %>
@@ -19,4 +25,7 @@
     <hr class="hr hr-blurry" />
   <% end %>
 </div>
+
+
+
 
